Fix page jump when content doesn't have a scrollbar.

--- a/assets/src/scss/base/_index.scss
+++ b/assets/src/scss/base/_index.scss
@@ -1,3 +1,7 @@
+html {
+  margin-left: calc(100vw - 100%);
+}
+
 html,
 body {
   -moz-osx-font-smoothing: grayscale;
